third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/spec/inline-table-2-0.stderr
TOML parse error at line 3, column 1
  |
3 | type.edible = false  # INVALID
  | ^
dotted key `type` attempted to extend non-table type (inline table)
